// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <RadioInput /> rendering should render no radio field when not visible 1`] = `
<div
  className=""
/>
`;

exports[`Form component <RadioInput /> rendering should render radio fields correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "placeholder": "type here",
          "values": Object {
            "bar": "Bar",
            "foo": "Foo",
          },
        }
      }
      touched={false}
    >
      <div
        className="antwoorden"
      >
        <div
          className="antwoord"
          key="foo"
        >
          <input
            checked={true}
            className="kenmerkradio"
            id="input-field-name-foo1"
            onChange={[Function]}
            type="radio"
          />
          <label
            htmlFor="input-field-name-foo1"
          >
            Foo
          </label>
        </div>
        <div
          className="antwoord"
          key="bar"
        >
          <input
            checked={false}
            className="kenmerkradio"
            id="input-field-name-bar1"
            onChange={[Function]}
            type="radio"
          />
          <label
            htmlFor="input-field-name-bar1"
          >
            Bar
          </label>
        </div>
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <RadioInput /> rendering should render zero radio fields when values are not supplied 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "placeholder": "type here",
          "values": undefined,
        }
      }
      touched={false}
    >
      <div
        className="antwoorden"
      />
    </Header>
  </div>
</div>
`;
